# VMTranslator

./: CMakeLists.txt  Stuff_to_fix  VM_to_assembly  code_parser.c  code_parser.h  error_handler.c  error_handler.h  main.c  memory_handler.c  memory_handler.h  overview  vm_assembly.h  writer.c  writer.h
comparison_test/: comparisonvmtest.asm  comparisonvmtest.tst
test_folder/: comparison_vm_test.vm  test_vm_file.vm  test_vm_file_2.vm
